hgignores: fixed .hgignore to ignore (untracked) user files and binaries.
R=nix-dev, noah.evans, nemo
CC=nix-dev
http://codereview.appspot.com/5027044

--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,13 @@
 syntax: regexp
-\.a$
+^lib/font/bit/
+^usr/
+^amd64/bin/
+^386/bin/
+^acme/bin/
 syntax: glob
-/usr/npe*
-#\.[0-9]
-usr/npe/tmp/*
+*.a
+*.a[568]
+*.[568]
+y.tab.[ch]
+y.debug
+[568].*
