runusb: Simple proto file to copy in the full tree with appropriate permissions plan9.ini: Tweaked to help boot from flash drives libboot.a8: This shouldn't be in the repo mkfile: Shouldn't die if we can't copy over gone.fishing, it's just not important! mknixboot: a script to help build a bootable Nix USB stick (not done yet).
These changes were made while I tried to get Nix booting from a USB stick. So far I've been able to boot 9pcf and mk install in /sys/src as well as build a kernel. For my next trick, booting into a Nix kernel (I hope).

R=nixiedev, rminnich
CC=nix-dev
http://codereview.appspot.com/5323064

--- a/sys/lib/sysconfig/usb/plan9.ini
+++ b/sys/lib/sysconfig/usb/plan9.ini
@@ -1,9 +1,10 @@
-console=0
+console=cga
 
-bootfile=sdB0!9fat!9pccpuf.gz
+bootfile=sdB0!9fat!9pcf
 nobootprompt=local!/dev/sdXX/fossil
 nvram=/dev/sdXX/nvram
 
 debugboot=1
 *nodumpstack=1
 *noe820print=1
+*nomp=1
