rc, include, ape, boot, libc: sync with plan 9
R=nixiedev, quanstro
CC=nix-dev
http://codereview.appspot.com/5762044

Committer: Francisco J Ballesteros <nemo.mbox@gmail.com>

--- a/sys/lib/sysconfig/usb/plan9.ini
+++ b/sys/lib/sysconfig/usb/plan9.ini
@@ -1,7 +1,10 @@
 console=cga
 
+# new 9load can figure out bootfile
 bootfile=sdB0!9fat!9pcf
 nobootprompt=local!/dev/sdXX/fossil
+
+readparts=
 nvram=/dev/sdXX/nvram
 
 debugboot=1
